# ImageContainer

./: README.md  pyproject.toml  requirements.txt
src/container/: README.md  __init__.py  format.py
src/container/binary_image/: README.md  connectivity.py  container.py
src/container/containers/: __init__.py  array.py
src/image_container/: README.md  ch_order.py  container.py
src/image_container/binary_image/: __init__.py  connected_components.py
src/image_container/containers/: array.py  pil.py
